more initial setup

--- a/clientapp/src/app/app.component.html
+++ b/clientapp/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>hello world
-  <input id="input" type="text">
-  <button (click)="search()">search</button>
-</div>
+<header>header</header>
+<main>
+  <router-outlet></router-outlet>
+</main>
