--- a/clientapp/src/app/app.component.html
+++ b/clientapp/src/app/app.component.html
@@ -1,4 +1,9 @@
-<header>header</header>
+<header>
+  <div>
+    <h1>Stonk Monitor</h1>
+    <button mat-icon-button><mat-icon>monitoring</mat-icon></button>
+  </div>
+</header>
 <main>
   <router-outlet></router-outlet>
 </main>
