Added autocomplete. Added more setup. Added simple search.

--- a/clientapp/src/app/app.component.scss
+++ b/clientapp/src/app/app.component.scss
@@ -1,5 +1,11 @@
 header {
-    width: 100%;
-    height: 4rem;
-    background-color: aquamarine;
+    background-color: theme('colors.raisin-black');
+
+    > div {
+        transition: all 0.1s ease-in-out;
+
+        &:hover {
+            background-color: #424C55;
+        }
+    }
 }
