--- a/clientapp/src/app/app.component.html
+++ b/clientapp/src/app/app.component.html
@@ -1,9 +1,12 @@
-<header>
-  <div>
-    <h1>Stonk Monitor</h1>
-    <button mat-icon-button><mat-icon>monitoring</mat-icon></button>
+<header class="w-full h-20 px-4 flex items-center bg-raisin-black">
+  <div class="rounded-lg flex items-center p-2 cursor-pointer">
+    <span class="text-xl mr-2 text-alice-blue">Stonk Monitor</span>
+    <mat-icon class="text-alice-blue">monitoring</mat-icon>
   </div>
 </header>
-<main>
+
+<app-sub-header></app-sub-header>
+
+<main class="h-[calc(100%-7rem)] text-alice-blue bg-raisin-black p-4">
   <router-outlet></router-outlet>
 </main>
