--- a/clientapp/src/app/shared/sub-header/sub-header.component.html
+++ b/clientapp/src/app/shared/sub-header/sub-header.component.html
@@ -1,4 +1,4 @@
-<div class="h-8 flex items-center justify-between bg-raisin-black">
-    <div>Breadcrumbs go here</div>
-    <app-ticker-search></app-ticker-search>
+<div class="h-12 px-6 flex items-center justify-between bg-raisin-black">
+    <div class="text-alice-blue-dark">Breadcrumbs go here</div>
+    <app-ticker-search class="w-1/3"></app-ticker-search>
 </div>
