--- a/clientapp/src/app/shared/ticker-search/ticker-search.component.html
+++ b/clientapp/src/app/shared/ticker-search/ticker-search.component.html
@@ -1,6 +1,8 @@
-<form id="search-form">
-    <mat-form-field appearance="outline">
-        <mat-icon matPrefix>search</mat-icon>
+<form id="search-form" (ngSubmit)="search()">
+    <mat-form-field class="w-full" appearance="outline">
+        <button mat-icon-button matPrefix>
+            <mat-icon class="text-alice-blue-dark" (click)="search()">search</mat-icon>
+        </button>
         <input placeholder="Search company or ticker"
         matInput
         [formControl]="searchControl"
@@ -9,8 +11,8 @@
     </mat-form-field>
     <mat-autocomplete #auto="matAutocomplete">
         @for (ticker of bestMatches; track $index) {
-            <mat-option [value]="ticker['1. symbol']" (click)="searchTicker(ticker)">
-                <span>{{ ticker['1. symbol'] }}: </span>
+            <mat-option [value]="ticker['1. symbol']" (click)="setCurrentTicker(ticker)">
+                <span>{{ ticker['1. symbol'] }}</span>
             </mat-option>
         }
     </mat-autocomplete>
